# postgrestd

./: .gitmodules  Cargo.toml  LICENSE  README.md  UPDATING_POSTGRESTD.md  aarch64-apple-darwin-postgres.json  aarch64-postgres-linux-gnu.json  aarch64-unknown-linux-postgres.json  block.md  build  clean  run  rust-toolchain.toml  rustfmt.toml  target.json  update-versions.sh  x86_64-apple-darwin-postgres.json  x86_64-postgres-gnu.json  x86_64-postgres-linux-gnu.json  x86_64-unknown-linux-postgres.json
.github/workflows/: main.yml  spin_up_aarch64_instance.yml
old-library/std/src/: alloc.rs
old-library/std/src/os/postgres/: mod.rs
old-library/std/src/sys/postgres/: common.rs  mod.rs  process.rs  thread.rs
old-library/std/src/sys/unix/: thread.rs
old-library/std/src/sys/unsupported/: mod.rs
old-library/test/src/: lib.rs
pallocator/: Cargo.toml
pallocator/src/: lib.rs
postpanic/: Cargo.toml
std/: Cargo.toml
std/src/: io.rs  lib.rs  os.rs  prelude.rs  sys.rs
